# rosetta-genomics

./: .gitignore  README.md  benchmark.py  demo.py  pretrain_multispecies.py  pyproject.toml  train.py  validate.py
configs/: large.yaml  medium.yaml  small.yaml
research/: GENOMIC_BENCHMARKS.md  THESIS.md
src/: __init__.py
src/data/: __init__.py  dataset.py  tokenizer.py
src/rosetta/: __init__.py  config.py  model.py
src/training/: __init__.py  trainer.py
validation/: report.json
